Stone blocks declinantion fix

--- a/src/main/resources/assets/malum/lang/ru_ru.json
+++ b/src/main/resources/assets/malum/lang/ru_ru.json
@@ -63,25 +63,25 @@
     "block.malum.chiseled_twisted_rock": "Высеченный искажённый камень",
     "block.malum.clinging_blight": "Липкая скверна",
     "block.malum.cracked_small_tainted_rock_bricks": "Потрескавшиеся маленькие запятнанные каменные кирпичи",
-    "block.malum.cracked_small_tainted_rock_bricks_slab": "Потрескавшаяся плита из маленьких запятнанных каменных кирпичей",
-    "block.malum.cracked_small_tainted_rock_bricks_stairs": "Потрескавшиеся ступеньки из маленьких запятнанных каменных кирпичей",
-    "block.malum.cracked_small_tainted_rock_bricks_wall": "Потрескавшаяся ограда из маленьких запятнанных каменных кирпичей",
+    "block.malum.cracked_small_tainted_rock_bricks_slab": "Потрескавшаяся плита из маленького запятнанного каменного кирпича",
+    "block.malum.cracked_small_tainted_rock_bricks_stairs": "Потрескавшиеся ступеньки из маленького запятнанного каменного кирпича",
+    "block.malum.cracked_small_tainted_rock_bricks_wall": "Потрескавшаяся ограда из маленького запятнанного каменного кирпича",
     "block.malum.cracked_small_twisted_rock_bricks": "Потрескавшиеся маленькие искажённые каменные кирпичи",
-    "block.malum.cracked_small_twisted_rock_bricks_slab": "Потрескавшаяся плита из маленьких искажённых каменных кирпичей",
-    "block.malum.cracked_small_twisted_rock_bricks_stairs": "Потрескавшиеся ступеньки из маленьких искажённых каменных кирпичей",
-    "block.malum.cracked_small_twisted_rock_bricks_wall": "Потрескавшаяся ограда из маленьких искажённых каменных кирпичей",
+    "block.malum.cracked_small_twisted_rock_bricks_slab": "Потрескавшаяся плита из маленького искажённого каменного кирпича",
+    "block.malum.cracked_small_twisted_rock_bricks_stairs": "Потрескавшиеся ступеньки из маленького искажённого каменного кирпича",
+    "block.malum.cracked_small_twisted_rock_bricks_wall": "Потрескавшаяся ограда из маленького искажённого каменного кирпича",
     "block.malum.cracked_tainted_rock_bricks": "Потрескавшиеся запятнанные каменные кирпичи",
-    "block.malum.cracked_tainted_rock_bricks_slab": "Потрескавшаяся плита из запятнанных каменных кирпичей",
-    "block.malum.cracked_tainted_rock_bricks_stairs": "Потрескавшиеся ступеньки из запятнанных каменных кирпичей",
-    "block.malum.cracked_tainted_rock_bricks_wall": "Потрескавшаяся ограда из запятнанных каменных кирпичей",
+    "block.malum.cracked_tainted_rock_bricks_slab": "Потрескавшаяся плита из запятнанного каменного кирпича",
+    "block.malum.cracked_tainted_rock_bricks_stairs": "Потрескавшиеся ступеньки из запятнанного каменного кирпича",
+    "block.malum.cracked_tainted_rock_bricks_wall": "Потрескавшаяся ограда из запятнанного каменного кирпича",
     "block.malum.cracked_tainted_rock_tiles": "Потрескавшийся запятнанный каменный плитняк",
     "block.malum.cracked_tainted_rock_tiles_slab": "Потрескавшаяся плита из запятнанного каменного плитняка",
     "block.malum.cracked_tainted_rock_tiles_stairs": "Потрескавшиеся ступеньки из запятнанного каменного плитняка",
     "block.malum.cracked_tainted_rock_tiles_wall": "Потрескавшаяся ограда из запятнанного каменного плитняка",
     "block.malum.cracked_twisted_rock_bricks": "Потрескавшиеся искажённые каменные кирпичи",
-    "block.malum.cracked_twisted_rock_bricks_slab": "Потрескавшаяся плита из искажённых каменных кирпичей",
-    "block.malum.cracked_twisted_rock_bricks_stairs": "Потрескавшиеся ступеньки из искажённых каменных кирпичей",
-    "block.malum.cracked_twisted_rock_bricks_wall": "Потрескавшаяся ограда из искажённых каменных кирпичей",
+    "block.malum.cracked_twisted_rock_bricks_slab": "Потрескавшаяся плита из искажённого каменного кирпича",
+    "block.malum.cracked_twisted_rock_bricks_stairs": "Потрескавшиеся ступеньки из искажённого каменного кирпича",
+    "block.malum.cracked_twisted_rock_bricks_wall": "Потрескавшаяся ограда из искажённого каменного кирпича",
     "block.malum.cracked_twisted_rock_tiles": "Потрескавшийся плитняк из искажённого камня",
     "block.malum.cracked_twisted_rock_tiles_slab": "Потрескавшаяся плита из искажённого каменного плитняка",
     "block.malum.cracked_twisted_rock_tiles_stairs": "Потрескавшиеся ступеньки из искажённого каменного плитняка",
@@ -203,13 +203,13 @@
     "block.malum.rustic_soulwood_tiles_stairs": "Кривые мозаичные ступеньки из дерева душ",
     "block.malum.sacred_spirited_glass": "Наполненное сакральностью стекло",
     "block.malum.small_tainted_rock_bricks": "Маленькие запятнанные каменные кирпичи",
-    "block.malum.small_tainted_rock_bricks_slab": "Плита из маленьких запятнанных каменных кирпичей",
-    "block.malum.small_tainted_rock_bricks_stairs": "Ступеньки из маленьких запятнанных каменных кирпичей",
-    "block.malum.small_tainted_rock_bricks_wall": "Ограда из маленьких запятнанных каменных кирпичей",
+    "block.malum.small_tainted_rock_bricks_slab": "Плита из маленького запятнанного каменного кирпича",
+    "block.malum.small_tainted_rock_bricks_stairs": "Ступеньки из маленького запятнанного каменного кирпича",
+    "block.malum.small_tainted_rock_bricks_wall": "Ограда из маленького запятнанного каменного кирпича",
     "block.malum.small_twisted_rock_bricks": "Маленькие искажённые каменные кирпичи",
-    "block.malum.small_twisted_rock_bricks_slab": "Плита из маленьких искажённых каменных кирпичей",
-    "block.malum.small_twisted_rock_bricks_stairs": "Ступеньки из маленьких искажённых каменных кирпичей",
-    "block.malum.small_twisted_rock_bricks_wall": "Ограда из маленьких искажённых каменных кирпичей",
+    "block.malum.small_twisted_rock_bricks_slab": "Плита из маленького искажённого каменного кирпича",
+    "block.malum.small_twisted_rock_bricks_stairs": "Ступеньки из маленького искажённого каменного кирпича",
+    "block.malum.small_twisted_rock_bricks_wall": "Ограда из маленького искажённого каменного кирпича",
     "block.malum.smooth_tainted_rock": "Гладкий запятнанный камень",
     "block.malum.smooth_tainted_rock_slab": "Плита из гладкого запятнанного камня",
     "block.malum.smooth_tainted_rock_stairs": "Ступеньки из гладкого запятнанного камня",
@@ -266,9 +266,9 @@
     "block.malum.tainted_iridescent_ether_brazier": "Эфирная перламутровая запятнанная жаровня",
     "block.malum.tainted_rock": "Запятнанный камень",
     "block.malum.tainted_rock_bricks": "Запятнанные каменные кирпичи",
-    "block.malum.tainted_rock_bricks_slab": "Плита из запятнанных каменных кирпичей",
-    "block.malum.tainted_rock_bricks_stairs": "Ступеньки из запятнанных каменных кирпичей",
-    "block.malum.tainted_rock_bricks_wall": "Ограда из запятнанных каменных кирпичей",
+    "block.malum.tainted_rock_bricks_slab": "Плита из запятнанного каменного кирпича",
+    "block.malum.tainted_rock_bricks_stairs": "Ступеньки из запятнанного каменного кирпича",
+    "block.malum.tainted_rock_bricks_wall": "Ограда из запятнанного каменного кирпича",
     "block.malum.tainted_rock_button": "Кнопка из запятнанного камня",
     "block.malum.tainted_rock_column": "Колонна из запятнанного камня",
     "block.malum.tainted_rock_column_cap": "Навершие колонны из запятнанного камня",
@@ -289,9 +289,9 @@
     "block.malum.twisted_iridescent_ether_brazier": "Эфирная перламутровая искажённая жаровня",
     "block.malum.twisted_rock": "Искажённый камень",
     "block.malum.twisted_rock_bricks": "Искажённые каменные кирпичи",
-    "block.malum.twisted_rock_bricks_slab": "Плита из искажённых каменных кирпичей",
-    "block.malum.twisted_rock_bricks_stairs": "Ступеньки из искажённых каменных кирпичей",
-    "block.malum.twisted_rock_bricks_wall": "Ограда из искажённых каменных кирпичей",
+    "block.malum.twisted_rock_bricks_slab": "Плита из искажённого каменного кирпича",
+    "block.malum.twisted_rock_bricks_stairs": "Ступеньки из искажённого каменного кирпича",
+    "block.malum.twisted_rock_bricks_wall": "Ограда из искажённого каменного кирпича",
     "block.malum.twisted_rock_button": "Кнопка из искажённого камня",
     "block.malum.twisted_rock_column": "Колонна из искажённого камня",
     "block.malum.twisted_rock_column_cap": "Навершие колонны из искажённого камня",
