--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -309,11 +309,11 @@
   "effect.malum.anglers_lure": "渔夫之诱",
   "effect.malum.anglers_lure.description": "让我所见所有鱼类明白恐惧的真正含义；因我是死亡的预兆。抛竿入海底深渊，我的鱼竿坚若磐石，是水下的灾祸。一人为无情世界所诟骂，而终在海洋中寻得慰藉。我唯一的朋友，鱼钩上的蚯蚓，蠕动而奋力攀过贫瘠世界的虚无。我独自一人。我内心空虚。但是，我在这，在钓鱼。",
   "effect.malum.ascension": "飞腾",
-  "effect.malum.arcane_reverberation": "奥术回响",
   "effect.malum.cancerous_growth": "瘤态增生",
   "effect.malum.cancerous_growth.description": "不受控制的增生让你更有胆量，增加最大生命值。",
   "effect.malum.earthen_might": "大地之威",
   "effect.malum.earthen_might.description": "大地加固了你的拳头和工具，增加整体伤害。",
+  "effect.malum.echoing_arcana": "奥术回响",
   "effect.malum.gaias_bulwark": "盖亚之护",
   "effect.malum.gaias_bulwark.description": "大地的壁垒保护了你，增加护甲值。",
   "effect.malum.gluttony": "暴食",
@@ -641,12 +641,13 @@
   "malum.gui.curio.effect.soul_ward_magic_resilience": "灵魂护盾魔法韧性",
   "malum.gui.curio.effect.soul_ward_physical_absorption": "灵魂护盾吸收物理和魔法伤害",
   "malum.gui.curio.effect.spirits_add_health": "收获精魂时给予额外生命值",
-  "malum.gui.curio.effect.spirits_buff_spirit_collection": "收获精魂时提升奥术谐振",
   "malum.gui.curio.effect.spirits_extend_effect": "收获精魂时延长药水持续时间",
   "malum.gui.curio.effect.spirits_gluttony": "收获精魂时给予暴食效果",
   "malum.gui.curio.effect.spirits_heal": "收获精魂时恢复生命值",
   "malum.gui.curio.effect.spirits_weave_mana": "收获精魂时恢复灵魂护盾",
-  "malum.gui.curio.effect.spirits_weave_mana_irons_spellbooks": "同时恢复铁之魔法书的魔力",
+  "malum.gui.curio.effect.spirits_weave_mana_irons_spellbooks": "收集精魂时恢复法术魔力 [铁之魔法书]",
+  "malum.gui.curio.effect.spirits_weave_resonance": "收集精魂时增强奥术谐振",
+  "malum.gui.curio.effect.spirits_weave_resonance_irons_spellbooks": "收集精魂时减少法术冷却 [铁之魔法书]",
   "malum.gui.curio.effect.spirits_xp": "收获精魂时给予经验",
   "malum.gui.curio.negative": "-%s",
   "malum.gui.curio.positive": "+%s",
