update: version bump

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -300,40 +300,52 @@
   "curios.identifier.rune": "符文",
   "curios.modifiers.brooch": "佩戴时：",
   "curios.modifiers.rune": "装备时：",
-  "death.attack.scythe_sweep": "%s被切成了两半",
-  "death.attack.scythe_sweep.player": "%s被%s切成了两半",
-  "death.attack.voodoo": "%s的灵魂被击碎了",
-  "death.attack.voodoo.player": "%s的灵魂被%s击碎了",
+  "death.attack.hidden_blade_counter": "%1$s被打碎成了齑粉",
+  "death.attack.hidden_blade_counter.item": "%1$s被%2$s用%3$s打碎成了齑粉",
+  "death.attack.scythe_melee": "%1$s被切成了两半",
+  "death.attack.scythe_melee.item": "%1$s被%2$s用%3$s切成了两半",
+  "death.attack.scythe_sweep": "%1$s被切成了两半",
+  "death.attack.scythe_sweep.item": "%1$s被%2$s用%3$s切成了两半",
+  "death.attack.voodoo.player": "%1$s的灵魂被%2$s击碎了",
+  "death.attack.vodooo.player.item": "%1$s的灵魂被%2$s用%3$s击碎了",
+  "death.attack.vodooo_playerless": "%1$s的灵魂被击碎了",
+  "death.attack.vodooo_playerless.player": "%1$s在试图逃离%2$s时被击碎了灵魂",
+  "death.attack.voodoo": "%1$s的灵魂被击碎了",
   "effect.malum.aethers_charm": "澄空之召",
   "effect.malum.aethers_charm.description": "澄空召唤着你，增加跳跃高度并减轻重力影响。",
   "effect.malum.anglers_lure": "渔夫之诱",
   "effect.malum.anglers_lure.description": "让我所见所有鱼类明白恐惧的真正含义；因我是死亡的预兆。抛竿入海底深渊，我的鱼竿坚若磐石，是水下的灾祸。一人为无情世界所诟骂，而终在海洋中寻得慰藉。我唯一的朋友，鱼钩上的蚯蚓，蠕动而奋力攀过贫瘠世界的虚无。我独自一人。我内心空虚。但是，我在这，在钓鱼。",
   "effect.malum.ascension": "飞腾",
+  "effect.malum.ascension.description": "在成功使用镰刀飞腾后，缓冲坠落并减小重力。",
   "effect.malum.cancerous_growth": "瘤态增生",
   "effect.malum.cancerous_growth.description": "不受控制的增生让你更有胆量，增加最大生命值。",
   "effect.malum.earthen_might": "大地之威",
-  "effect.malum.earthen_might.description": "大地加固了你的拳头和工具，增加整体伤害。",
+  "effect.malum.earthen_might.description": "大地加固了你的拳头和工具，增加攻击力量。",
   "effect.malum.echoing_arcana": "奥术回响",
+  "effect.malum.echoing_arcana.description": "不受控制的增强让你更加明智，增加奥术谐振。",
   "effect.malum.gaias_bulwark": "盖亚之护",
-  "effect.malum.gaias_bulwark.description": "大地的壁垒保护了你，增加护甲值。",
+  "effect.malum.gaias_bulwark.description": "大地的甲壳包裹着你，额外增加护甲值。",
   "effect.malum.gluttony": "暴食",
-  "effect.malum.gluttony.description": "你通过吞食弱者而变强，增加镰刀熟练度并能逐渐恢复饥饿值。",
+  "effect.malum.gluttony.description": "你通过吞食弱者而变强，以饥饿为代价增加魔法熟练度。",
   "effect.malum.grim_certainty": "诡秘之必然",
   "effect.malum.grim_certainty.description": "宙界重斧不停地振荡，它的下一击必定能造成暴击。",
   "effect.malum.ifrits_embrace": "火灵之拥",
   "effect.malum.ifrits_embrace.description": "火焰的温暖拥怀包裹了你的灵魂，治愈你灼伤的疤痕。",
   "effect.malum.imminent_deliverance": "挽魂将临",
+  "effect.malum.imminent_deliverance.description": "挽魂锋镰不停地振荡，它的下一击必定能造成暴击。",
   "effect.malum.miners_rage": "矿工之怒",
   "effect.malum.miners_rage.description": "光耀加固了你的工具，提升挖掘速度与攻击速度。",
   "effect.malum.poseidons_grasp": "海神之握",
   "effect.malum.poseidons_grasp.description": "你为寻得强大力量而展臂远触，增加触及半径与物品拾取距离。",
   "effect.malum.reactive_shielding": "反应护盾",
+  "effect.malum.reactive_shielding.description": "符文的力量令你的护甲值和盔甲韧性增加了十分之一。",
   "effect.malum.rejected": "受拒",
   "effect.malum.sacrificial_empowerment": "献祭权能",
+  "effect.malum.sacrificial_empowerment.description": "符文的力量额外给予了你镰刀熟练度。",
   "effect.malum.silenced": "静默",
   "effect.malum.silenced.description": "你遭到了静默，魔法能力被完全压制。",
   "effect.malum.wicked_intent": "邪恶意图",
-  "effect.malum.wicked_intent.description": "你为有力反击对手而整装待发，增加单次挥砍的镰刀熟练度。",
+  "effect.malum.wicked_intent.description": "你为有力反击对手而整装待发，下一次挥动镰刀会砍出近乎不可能的连斩。",
   "effect.malum.zephyrs_courage": "西风之勇",
   "effect.malum.zephyrs_courage.description": "西风推动着你前进，提升移动速度。",
   "enchantment.malum.animated": "舞刃",
