zh_cn lang hotfix

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -1356,6 +1356,7 @@
   "malum.gui.book.entry.arcane_restoration.tool_repair.description": "钢铁的修复",
   "malum.gui.book.entry.page.headline.arcane_restoration.tool_repair": "修复工具",
   "malum.gui.book.entry.page.text.arcane_restoration.tool_repair.1": "",
+  "malum.gui.book.entry.page.text.arcane_restoration.tool_repair.2": "",
 
 
   "malum.gui.book.entry.mote_making": "奥能聚块的制作",
