zh_cn lang update

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -691,7 +691,8 @@
   "malum.gui.crucible.attribute.instability": "失稳风险",
   "malum.gui.crucible.attribute.restoration_chance": "修复概率",
   "malum.gui.crucible.attribute.tuning_potency": "调谐强度",
-  "malum.gui.crucible.attribute.weakest_boost": "最弱属性增益",
+  "malum.gui.crucible.attribute.tuning_strain": "调谐负担",
+  "malum.gui.crucible.attribute.weakness_tuning": "最弱属性调谐",
   "malum.gui.rite.aerial_rite": "运动仪式",
   "malum.gui.rite.aqueous_rite": "忠诚仪式",
   "malum.gui.rite.arcane_rite": "无向仪式",
@@ -1386,7 +1387,7 @@
   "malum.gui.book.entry.impurity_stabilizer": "杂质稳定器",
   "malum.gui.book.entry.impurity_stabilizer.description": "由弱生强",
   "malum.gui.book.entry.page.headline.impurity_stabilizer": "杂质稳定器",
-  "malum.gui.book.entry.page.text.impurity_stabilizer.1": "邪恶精魂会主动接近弱点与弱 者，渴求屠戮。杂质稳定器便重 新利用了这一性质，为坩埚最弱 的属性提供了大量百分比增幅； 燃料使用速率和失稳风险除外， 这两项属性只会获得少量提升。",
+  "malum.gui.book.entry.page.text.impurity_stabilizer.1": "邪恶精魂会主动接近弱点与弱 者，渴求屠戮。杂质稳定器便重 新利用了这一性质，除燃料使用 速率和失稳风险外，为坩埚最弱 的属性提供了大量百分比调谐增 幅。不过，此调谐确实会增加调 谐负担。",
 
   "malum.gui.book.entry.accelerating_inlay": "加速衬层",
   "malum.gui.book.entry.accelerating_inlay.description": "双倍下注",
