zh_cn lang update

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -399,6 +399,8 @@
   "item.malum.chunk_of_brilliance": "经验晶碎块",
   "item.malum.cluster_of_brilliance": "经验晶簇",
   "item.malum.coal_fragment": "煤炭碎块",
+  "item.malum.cobalt_impetus": "钴促符",
+  "item.malum.cobalt_node": "钴节点",
   "item.malum.complete_design": "完整构造件",
   "item.malum.catalyst_lobber": "促焰投具",
   "item.malum.concentrated_gluttony": "暴食聚液",
@@ -408,6 +410,7 @@
   "item.malum.cornered_weave": "指挥官织物",
   "item.malum.cracked_alchemical_impetus": "碎裂的炼金促符",
   "item.malum.cracked_aluminum_impetus": "碎裂的铝促符",
+  "item.malum.cracked_cobalt_impetus": "碎裂的钴促符",
   "item.malum.cracked_copper_impetus": "碎裂的铜促符",
   "item.malum.cracked_gold_impetus": "碎裂的金促符",
   "item.malum.cracked_iron_impetus": "碎裂的铁促符",
