zh_cn lang update

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -63,7 +63,6 @@
   "block.malum.brilliant_obelisk": "经验晶方尖碑",
   "block.malum.brilliant_obelisk_component": "经验晶方尖碑构件",
   "block.malum.brilliant_stone": "经验晶矿石",
-  "block.malum.budding_soulwood_leaves": "含苞的灵魂树叶",
   "block.malum.calcified_blight": "钙化腐枯簇",
   "block.malum.checkered_tainted_rock": "棋盘格纹污秽石",
   "block.malum.checkered_twisted_rock": "棋盘格纹扭曲石",
@@ -418,10 +417,11 @@
   "item.malum.blazing_quartz_fragment": "烈焰石英碎块",
   "item.malum.blighted_gunk": "腐枯物质",
   "item.malum.calcified_blight": "钙化腐枯物质",
+  "item.malum.catalyst_lobber": "促焰投具",
+  "item.malum.caustic_catalyst": "苛性催化器",
   "item.malum.charcoal_fragment": "木炭碎块",
   "item.malum.coal_fragment": "煤炭碎块",
   "item.malum.complete_design": "完整构造件",
-  "item.malum.catalyst_lobber": "促焰投具",
   "item.malum.concentrated_gluttony": "暴食聚液",
   "item.malum.copper_impetus": "铜促符",
   "item.malum.copper_node": "铜结点",
@@ -513,6 +513,7 @@
   "item.malum.raw_soulstone": "粗灵魂石",
   "item.malum.refined_brilliance": "精制经验晶",
   "item.malum.refined_soulstone": "精制灵魂石",
+  "item.malum.resonance_tuner": "谐振调谐器",
   "item.malum.ring_of_alchemical_mastery": "炼金纯熟戒指",
   "item.malum.ring_of_arcane_prowess": "奥术才智戒指",
   "item.malum.ring_of_curative_talent": "疗愈魔能戒指",
@@ -588,6 +589,8 @@
   "item.malum.splash_of_gluttony": "喷溅型暴食聚液",
   "item.malum.staff_of_the_auric_flame": "灵气火焰法杖",
   "item.malum.stellar_mechanism": "星辰机件",
+  "item.malum.suspicious_device": "可疑装置",
+  "item.malum.sympathy_drive": "协和驱动器",
   "item.malum.tainted_rock_tablet": "污秽石符板",
   "item.malum.tin_impetus": "锡促符",
   "item.malum.tin_node": "锡结点",
@@ -683,12 +686,15 @@
   "malum.gui.augment.slot": "槽位：",
   "malum.gui.augment.type.augment": "增强件",
   "malum.gui.augment.type.core_augment": "核心增强件",
+  "malum.gui.crucible.attribute.caustic_synergy": "苛性同调",
   "malum.gui.crucible.attribute.chain_focusing_chance": "连锁聚焦概率",
   "malum.gui.crucible.attribute.damage_absorption_chance": "损伤吸收概率",
   "malum.gui.crucible.attribute.focusing_speed": "聚焦速度",
   "malum.gui.crucible.attribute.fortune_chance": "时运概率",
   "malum.gui.crucible.attribute.fuel_usage_rate": "燃料使用速率",
   "malum.gui.crucible.attribute.instability": "失稳风险",
+  "malum.gui.crucible.attribute.misfortune_reversal": "厄运逆转",
+  "malum.gui.crucible.attribute.resonance_tuning": "谐振调谐",
   "malum.gui.crucible.attribute.restoration_chance": "修复概率",
   "malum.gui.crucible.attribute.tuning_potency": "调谐强度",
   "malum.gui.crucible.attribute.tuning_strain": "调谐负担",
@@ -1387,7 +1393,7 @@
   "malum.gui.book.entry.impurity_stabilizer": "杂质稳定器",
   "malum.gui.book.entry.impurity_stabilizer.description": "由弱生强",
   "malum.gui.book.entry.page.headline.impurity_stabilizer": "杂质稳定器",
-  "malum.gui.book.entry.page.text.impurity_stabilizer.1": "邪恶精魂会主动接近弱点与弱 者，渴求屠戮。杂质稳定器便重 新利用了这一性质，除燃料使用 速率和失稳风险外，为坩埚最弱 的属性提供了大量百分比调谐增 幅。不过，此调谐确实会增加调 谐负担。",
+  "malum.gui.book.entry.page.text.impurity_stabilizer.1": "邪恶精魂会主动接近弱点与弱 者，渴求屠戮。杂质稳定器便利 用了这一性质，除燃料使用速率 和失稳风险外，为坩埚最弱的属 性提供了大量百分比调谐增幅。 不过，这确实会有副作用，会给 标准的调谐流程加上些许负担。",
 
   "malum.gui.book.entry.accelerating_inlay": "加速衬层",
   "malum.gui.book.entry.accelerating_inlay.description": "双倍下注",
