zh_cn lang update

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -587,10 +587,9 @@
   "item.malum.spectral_lens": "灵魂透镜",
   "item.malum.spectral_optic": "灵魂视镜",
   "item.malum.splash_of_gluttony": "喷溅型暴食聚液",
-  "item.malum.staff_of_the_auric_flame": "灵气火焰法杖",
   "item.malum.stellar_mechanism": "星辰机件",
   "item.malum.suspicious_device": "可疑装置",
-  "item.malum.sympathy_drive": "协和驱动器",
+  "item.malum.sympathy_drive": "谐和驱动器",
   "item.malum.tainted_rock_tablet": "污秽石符板",
   "item.malum.tin_impetus": "锡促符",
   "item.malum.tin_node": "锡结点",
@@ -600,6 +599,7 @@
   "item.malum.tuning_fork": "调谐音叉",
   "item.malum.tyrving": "提尔锋",
   "item.malum.umbral_spirit": "幽影精魂",
+  "item.malum.unwinding_chaos": "混沌四侵",
   "item.malum.uranium_impetus": "铀促符",
   "item.malum.uranium_node": "铀结点",
   "item.malum.void_salts": "虚空盐",
@@ -868,10 +868,6 @@
   "malum.subtitle.quartz_cluster_block_hit": "方块：损坏中",
   "malum.subtitle.quartz_cluster_block_place": "方块：被放置",
   "malum.subtitle.quartz_cluster_block_step": "脚步声",
-  "malum.subtitle.redstone_diode_break": "方块：被破坏",
-  "malum.subtitle.redstone_diode_hit": "方块：损坏中",
-  "malum.subtitle.redstone_diode_place": "方块：被放置",
-  "malum.subtitle.redstone_diode_step": "脚步声",
   "malum.subtitle.rejected_by_the_unknown": "未知存在：拒绝",
   "malum.subtitle.repair_pylon_begins_repairing": "修复基柱：开始修复",
   "malum.subtitle.repair_pylon_eagerly_hums": "修复基柱：高声嗡鸣",
@@ -957,13 +953,19 @@
   "malum.subtitle.spirit_altar_speeds_up": "精魂祭坛：加速",
   "malum.subtitle.spirit_crucible_completes_focusing": "精魂坩埚：聚焦完成",
   "malum.subtitle.spirit_crucible_focuses": "精魂坩埚：聚焦",
+  "malum.subtitle.spirit_diode_break": "方块：被破坏",
+  "malum.subtitle.spirit_diode_close": "精魂二极管：关闭",
+  "malum.subtitle.spirit_diode_hit": "方块：损坏中",
+  "malum.subtitle.spirit_diode_open": "精魂二极管：开启",
+  "malum.subtitle.spirit_diode_place": "方块：被放置",
+  "malum.subtitle.spirit_diode_step": "脚步声",
   "malum.subtitle.spirit_engraved": "精魂：铭刻",
   "malum.subtitle.spirit_mote_created": "精魂聚块：制造",
   "malum.subtitle.spirit_picked_up": "精魂：被捡拾",
   "malum.subtitle.staff_charged": "法杖：充能完毕",
   "malum.subtitle.staff_fires": "法杖：发射",
   "malum.subtitle.staff_powers_up": "法杖：充能",
-  "malum.subtitle.staff_sizzles": "法杖：嘶嘶",
+  "malum.subtitle.staff_sizzles_out": "法杖：嘶嘶",
   "malum.subtitle.staff_strikes": "法杖：攻击",
   "malum.subtitle.the_deep_beckons": "深渊：召唤",
   "malum.subtitle.the_heavens_sing": "天空：歌唱",
@@ -986,6 +988,10 @@
   "malum.subtitle.wavemaker_pulses": "信波制造器：脉冲",
   "malum.subtitle.weavers_workbench_weaves": "织物工作台：编织",
   "malum.subtitle.weight_of_worlds_cuts": "宙界重斧：挥砍",
+  "malum.waveform_artifice.wavebanker": "红石脉冲持续时间：%s",
+  "malum.waveform_artifice.wavebreaker": "红石脉冲延迟：%s",
+  "malum.waveform_artifice.wavecharger": "红色插值时间：%s",
+  "malum.waveform_artifice.wavemaker": "红石脉冲频率：%s",
   "tetra.improvement.malum.soul_strike.description": "制造物品所用的材料让物品能够击碎灵魂",
   "tetra.improvement.malum.soul_strike.name": "灵魂重击",
   "tetra.material.hallowed_gold": "神圣金",
