zh_cn lang update

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -1,6 +1,8 @@
 {
   "attribute.name.malum.arcane_resonance": "奥术谐振",
   "attribute.name.malum.arcane_resonance.desc": "收集到精魂时所触发效果的额外强度",
+  "attribute.name.malum.charge_duration": "充能时间",
+  "attribute.name.malum.healing_received": "所受治疗",
   "attribute.name.malum.malignant_conversion": "恶念转化",
   "attribute.name.malum.malignant_conversion.desc": "百分比转化率，能将部分魔法属性转换为护甲值、盔甲韧性，以及魔法抗性",
   "attribute.name.malum.reserve_staff_charges": "法杖暂存弹数",
@@ -11,7 +13,7 @@
   "attribute.name.malum.soul_ward_capacity.desc": "灵魂护盾的容量",
   "attribute.name.malum.soul_ward_integrity": "灵魂护盾稳固度",
   "attribute.name.malum.soul_ward_integrity.desc": "百分比增量，能提升灵魂护盾的耐久度",
-  "attribute.name.malum.soul_ward_multiplier": "灵魂护盾倍数",
+  "attribute.name.malum.soul_ward_recovery_multiplier": "灵魂护盾恢复倍数",
   "attribute.name.malum.soul_ward_recovery_rate": "灵魂护盾恢复速率",
   "attribute.name.malum.soul_ward_recovery_rate.desc": "百分比增量，能提升灵魂护盾的恢复速率",
   "attribute.name.malum.spirit_spoils": "精魂掠夺",
@@ -28,6 +30,7 @@
   "banner_pattern.malum.sanity": "理智",
   "banner_pattern.malum.sequence": "序列",
   "banner_pattern.malum.sigil": "印记",
+  "banner_pattern.malum.spawn": "孳生",
   "block.malum.aerial_spirited_glass": "澄空融魂玻璃",
   "block.malum.aqueous_spirited_glass": "碧水融魂玻璃",
   "block.malum.arcane_spirited_glass": "奥术融魂玻璃",
@@ -321,17 +324,34 @@
   "curios.identifier.rune": "符文",
   "curios.modifiers.brooch": "佩戴时：",
   "curios.modifiers.rune": "装备时：",
-  "death.attack.hidden_blade_counter": "%1$s被打碎成了齑粉",
+  "death.attack.hidden_blade_counter": "%1$s被%2$s打碎成了齑粉",
   "death.attack.hidden_blade_counter.item": "%1$s被%2$s用%3$s打碎成了齑粉",
-  "death.attack.scythe_melee": "%1$s被切成了两半",
+  "death.attack.nitrate": "%1$s被%2$s被引爆了灵魂",
+  "death.attack.nitrate.item": "%1$s被%2$s用%3$s被引爆了灵魂",
+  "death.attack.nitrate_playerless": "%1$s被引爆了灵魂",
+  "death.attack.nitrate_playerless.player": "%1$s在试图逃离%2$s时被引爆了灵魂",
+  "death.attack.scythe_ascension": "%1$s被%2$s飞腾时挥舞的镰刀斩杀了",
+  "death.attack.scythe_ascension.item": "%1$s被%2$s飞腾时用的%3$s斩杀了",
+  "death.attack.scythe_combo": "%1$s被%2$s切成两半后又被切成了四份",
+  "death.attack.scythe_combo.item": "%1$s被%2$s用%3$s切成两半后又被切成了四份",
+  "death.attack.scythe_melee": "%1$s被%2$s切成了两半",
   "death.attack.scythe_melee.item": "%1$s被%2$s用%3$s切成了两半",
-  "death.attack.scythe_sweep": "%1$s被切成了两半",
+  "death.attack.scythe_rebound": "%1$s被%2$s用镰刀回旋镖击杀了",
+  "death.attack.scythe_rebound.item": "%1$s被%2$s用%3$s回旋镖击杀了",
+  "death.attack.scythe_sweep": "%1$s被%2$s切成了两半",
   "death.attack.scythe_sweep.item": "%1$s被%2$s用%3$s切成了两半",
-  "death.attack.vodooo.player": "%1$s的灵魂被%2$s击碎了",
-  "death.attack.vodooo.player.item": "%1$s的灵魂被%2$s用%3$s击碎了",
-  "death.attack.vodooo_playerless": "%1$s的灵魂被击碎了",
-  "death.attack.vodooo_playerless.player": "%1$s在试图逃离%2$s时被击碎了灵魂",
-  "death.attack.voodoo": "%1$s的灵魂被击碎了",
+  "death.attack.soulwashing_propagation": "%1$s陷入了%2$s的业力流",
+  "death.attack.soulwashing_propagation.item": "%1$s陷入了%2$s用%3$s产生的业力流",
+  "death.attack.soulwashing_retaliation": "%1$s陷入了%2$s的业力流",
+  "death.attack.soulwashing_retaliation.item": "%1$s陷入了%2$s用%3$s产生的业力流",
+  "death.attack.tyrving": "%1$s的灵魂被%2$s留下了伤疤",
+  "death.attack.tyrving.item": "%1$s的灵魂被%2$s用%3$s留下了伤疤",
+  "death.attack.void": "%1$s的实在被侵蚀殆尽了",
+  "death.attack.void.player": "%1$s在试图逃离%2$s时其实在被侵蚀殆尽了",
+  "death.attack.voodoo": "%1$s的灵魂被%2$s击碎了",
+  "death.attack.voodoo.item": "%1$s的灵魂被%2$s用%3$s击碎了",
+  "death.attack.voodoo_playerless": "%1$s的灵魂被击碎了",
+  "death.attack.voodoo_playerless.player": "%1$s在试图逃离%2$s时被击碎了灵魂",
   "effect.malum.aethers_charm": "澄空之召",
   "effect.malum.aethers_charm.description": "澄空召唤着你，增加跳跃高度并减轻重力影响。",
   "effect.malum.anglers_lure": "渔夫之诱",
@@ -340,6 +360,7 @@
   "effect.malum.ascension.description": "在成功使用镰刀飞腾后，缓冲坠落并减小重力。",
   "effect.malum.cancerous_growth": "瘤态增生",
   "effect.malum.cancerous_growth.description": "不受控制的增生让你更有胆量，增加最大生命值。",
+  "effect.malum.chaos_curse": "混沌诅咒",
   "effect.malum.earthen_might": "大地之威",
   "effect.malum.earthen_might.description": "大地加固了你的拳头和工具，增加攻击力量。",
   "effect.malum.echoing_arcana": "奥术回响",
@@ -370,9 +391,11 @@
   "effect.malum.zephyrs_courage": "西风之勇",
   "effect.malum.zephyrs_courage.description": "西风推动着你前进，提升移动速度。",
   "enchantment.malum.animated": "舞刃",
-  "enchantment.malum.animated.desc": "增加镰刀的攻击速度。",
+  "enchantment.malum.animated.desc": "增加攻击速度。",
   "enchantment.malum.ascension": "飞腾",
   "enchantment.malum.ascension.desc": "允许使用镰刀向上推进玩家，同时推开周围敌人。",
+  "enchantment.malum.capacitor": "容弹",
+  "enchantment.malum.capacitor.desc": "法杖能保有更多暂存法术弹。",
   "enchantment.malum.haunted": "缚灵",
   "enchantment.malum.haunted.desc": "增加武器的魔法伤害。",
   "enchantment.malum.rebound": "回旋",
@@ -381,8 +404,8 @@
   "enchantment.malum.replenishing.desc": "使用法杖造成近战伤害时减少其远程攻击的冷却。",
   "enchantment.malum.spirit_plunder": "精魂劫掠",
   "enchantment.malum.spirit_plunder.desc": "增加击杀敌人时的精魂掉落。",
-  "entity.malum.auric_flame_bolt": "灵气火焰束",
   "entity.malum.draining_bolt": "侵蚀能量束",
+  "entity.malum.entropic_flame_bolt": "熵能火焰束",
   "entity.malum.etheric_nitrate": "灵火硝石",
   "entity.malum.hex_bolt": "咒术束",
   "entity.malum.hidden_blade_delayed_impact": "隐藏锋刃延迟打击",
@@ -439,7 +462,6 @@
   "item.malum.cracked_tin_impetus": "碎裂的锡促符",
   "item.malum.cracked_uranium_impetus": "碎裂的铀促符",
   "item.malum.cracked_zinc_impetus": "碎裂的锌促符",
-  "item.malum.creative_scythe": "创造模式镰刀",
   "item.malum.crude_scythe": "粗制镰刀",
   "item.malum.crushed_brilliance": "粉碎经验晶",
   "item.malum.crushed_soulstone": "粉碎灵魂石",
@@ -447,7 +469,6 @@
   "item.malum.cthonic_gold_fragment": "深岩珍金碎片",
   "item.malum.cursed_sap": "诅咒树脂",
   "item.malum.cursed_sapball": "诅咒树脂球",
-  "item.malum.dreaded_weave": "恐惧织物",
   "item.malum.earthen_spirit": "大地精魂",
   "item.malum.edge_of_deliverance": "挽魂锋镰",
   "item.malum.elaborate_brooch": "精致胸针",
@@ -456,8 +477,9 @@
   "item.malum.encyclopedia_esoterica": "奥秘全典",
   "item.malum.erosion_scepter": "侵蚀权杖",
   "item.malum.esoteric_spool": "隐秘线轴",
-  "item.malum.filled_spirit_jar": "装有精魂的精魂罐",
+  "item.malum.filled.spirit_jar": "装有精魂的精魂罐",
   "item.malum.fused_consciousness": "融合意识",
+  "item.malum.geas": "誓言",
   "item.malum.gilded_belt": "镀金腰带",
   "item.malum.gilded_ring": "镀金戒指",
   "item.malum.glass_brooch": "玻璃胸针",
@@ -526,6 +548,7 @@
   "item.malum.ring_of_the_demolitionist": "爆破师戒指",
   "item.malum.ring_of_the_endless_well": "无底渊井戒指",
   "item.malum.ring_of_the_hoarder": "囤积者戒指",
+  "item.malum.ring_of_the_rising_edge": "升腾锋刃戒指",
   "item.malum.ritual_shard": "灵仪碎片",
   "item.malum.rotting_essence": "腐朽精华",
   "item.malum.rune_of_aliment_cleansing": "病痛祓除符文",
@@ -553,7 +576,6 @@
   "item.malum.rune_of_volatile_distortion": "扭曲无常符文",
   "item.malum.rune_of_warding": "守护符文",
   "item.malum.runewood_boat": "符文木船",
-  "item.malum.runewood_tablet": "符文木符板",
   "item.malum.runic_brooch": "符文胸针",
   "item.malum.runic_sap": "符文树脂",
   "item.malum.runic_sapball": "符文树脂球",
@@ -581,16 +603,15 @@
   "item.malum.soul_stained_steel_shovel": "魂染钢锹",
   "item.malum.soul_stained_steel_sword": "魂染钢剑",
   "item.malum.soulwood_boat": "灵魂木船",
-  "item.malum.soulwood_tablet": "灵魂木符板",
   "item.malum.soulwoven_pouch": "魂织布袋",
   "item.malum.soulwoven_silk": "魂织绸缎",
   "item.malum.spectral_lens": "灵魂透镜",
   "item.malum.spectral_optic": "灵魂视镜",
   "item.malum.splash_of_gluttony": "喷溅型暴食聚液",
   "item.malum.stellar_mechanism": "星辰机件",
+  "item.malum.sundering_anchor": "裂斩锚刃",
   "item.malum.suspicious_device": "可疑装置",
   "item.malum.sympathy_drive": "谐和驱动器",
-  "item.malum.tainted_rock_tablet": "污秽石符板",
   "item.malum.tin_impetus": "锡促符",
   "item.malum.tin_node": "锡结点",
   "item.malum.token_of_gratitude": "感恩代币",
@@ -603,7 +624,6 @@
   "item.malum.uranium_impetus": "铀促符",
   "item.malum.uranium_node": "铀结点",
   "item.malum.void_salts": "虚空盐",
-  "item.malum.void_tablet": "虚空石符板",
   "item.malum.warp_flux": "扭曲能流",
   "item.malum.warping_engine": "扭曲引擎",
   "item.malum.weight_of_worlds": "宙界重斧",
@@ -631,15 +651,15 @@
   "itemGroup.malum_arcane_construct": "灵灾丨奥术建构",
   "itemGroup.malum_basis_of_magic": "灵灾丨魔法基础",
   "itemGroup.malum_cosmetics": "灵灾丨自我表达",
+  "itemGroup.malum_geas": "灵灾丨Bleghhh:P x3",
   "itemGroup.malum_metallurgic_magics": "灵灾丨冶金魔法",
   "itemGroup.malum_natural_wonders": "灵灾丨生于奥法",
   "itemGroup.malum_ritual_shards": "灵灾丨灵仪碎片",
-  "itemGroup.malum_void_chronicles": "灵灾丨虚空通史",
   "malum.effect.curio.always_sprint": "疾跑一直可用",
+  "malum.effect.curio.ascension_launch": "飞腾魔咒可将目标向上击飞",
   "malum.effect.curio.attacked_resistance": "受击时获得伤害抗性",
-  "malum.effect.curio.better_conduit_power": "潮涌能量给予大量正面效果",
   "malum.effect.curio.bigger_explosions": "增强爆炸效果",
-  "malum.effect.curio.burning_resistance": "着火时获得伤害抗性",
+  "malum.effect.curio.burning_damage": "燃烧伤害",
   "malum.effect.curio.crits": "暴击",
   "malum.effect.curio.eat_rotten": "腐败的食物更加可口",
   "malum.effect.curio.enchanted_explosions": "爆炸带有%s魔咒",
@@ -653,12 +673,11 @@
   "malum.effect.curio.full_health_fake_collection": "攻击满生命值目标时触发收获精魂时的效果",
   "malum.effect.curio.growing_gluttony": "食用腐败食物时延长暴食效果持续时间",
   "malum.effect.curio.hunger_drain": "持续消耗饥饿值",
+  "malum.effect.curio.longer_ascension_cooldown": "飞腾魔咒冷却延长",
   "malum.effect.curio.low_health_speed": "低生命值时提升速度",
-  "malum.effect.curio.negative": "-%s",
   "malum.effect.curio.no_sweep": "禁止镰刀横扫攻击",
   "malum.effect.curio.pacifist_recharge": "使用镰刀后冷却延长",
   "malum.effect.curio.passive_healing": "持续恢复生命值",
-  "malum.effect.curio.positive": "+%s",
   "malum.effect.curio.rotten_gluttony": "食用腐败的食物给予暴食效果",
   "malum.effect.curio.scythe_chain": "镰刀连续击杀时增强",
   "malum.effect.curio.scythe_counterattack": "受击造成镰刀猛烈反击",
@@ -677,13 +696,36 @@
   "malum.effect.curio.spirits_weave_resonance": "收集精魂时增强奥术谐振",
   "malum.effect.curio.spirits_weave_resonance_irons_spellbooks": "收集精魂时减少法术冷却 [铁之魔法书]",
   "malum.effect.curio.spirits_xp": "收获精魂时给予经验",
-  "malum.effect.edge_of_deliverance_crit": "后续攻击必定暴击",
+  "malum.effect.edge_of_deliverance_crit": "紧随的攻击必定暴击",
   "malum.effect.edge_of_deliverance_unpowered_attack": "非暴击的攻击造成的伤害较少",
+  "malum.effect.erosive_silence": "侵蚀伤害能静默目标",
+  "malum.effect.erosive_spread": "散射法术弹拆成的多个侵蚀能量束",
+  "malum.effect.geas.authority_of_greed": "疾病、祝福、诅咒在受伤时暂停",
+  "malum.effect.geas.authority_of_greed_arcane_resonance": "奥术谐振延长暂停时间",
+  "malum.effect.geas.authority_of_wrath": "伤病、情感、知觉与所见者分享",
+  "malum.effect.geas.authority_of_wrath_arcane_resonance": "奥术谐振扩大影响范围",
+  "malum.effect.geas.hunger_as_withdrawal": "屠杀成瘾",
+  "malum.effect.geas.malignant_crit_healing_overexertion": "重复触发会阻断所有治疗",
+  "malum.effect.geas.malignant_crit_leech": "恶念挽魂汲取生命力",
+  "malum.effect.geas.malignant_crit_reinforcement": "恶念挽魂增加恶念转化",
+  "malum.effect.geas.no_block_breaking": "爆炸不会损伤地形",
+  "malum.effect.geas.only_scythe": "普通武器使用时会崩解",
+  "malum.effect.geas.rocket_jumping": "爆炸造成更强击退",
+  "malum.effect.geas.scythe_combo": "镰刀挥砍产生连斩",
+  "malum.effect.geas.soul_ward_on_hit": "造成魔法伤害恢复灵魂护盾",
+  "malum.effect.geas.staff_autofire": "法杖充能后自动发射",
+  "malum.effect.geas.staff_homing": "法术弹射物追踪目标",
+  "malum.effect.hex_bolts": "发射锐利的忆念能量束",
+  "malum.effect.negative": "-%s",
+  "malum.effect.positive": "+%s",
   "malum.effect.soul_based_damage": "造成灵魂魔法伤害",
+  "malum.effect.sundering_anchor_chaos_curse": "每次斩击都给予混沌诅咒",
+  "malum.effect.sundering_anchor_damage_split": "伤害平均分配至各斩击",
+  "malum.effect.unwinding_chaos_burn": "造成燃烧伤害可增强齐射",
+  "malum.effect.unwinding_chaos_volley": "齐射一系列融合能量束",
   "malum.effect.weight_of_worlds_crit": "攻击有可能变为暴击",
   "malum.effect.weight_of_worlds_kill": "击杀后下一次攻击必定暴击",
   "malum.gui.augment.installed": "装载增强件时：",
-  "malum.gui.augment.slot": "槽位：",
   "malum.gui.augment.type.augment": "增强件",
   "malum.gui.augment.type.core_augment": "核心增强件",
   "malum.gui.crucible.attribute.caustic_synergy": "苛性同调",
@@ -699,6 +741,49 @@
   "malum.gui.crucible.attribute.tuning_potency": "调谐强度",
   "malum.gui.crucible.attribute.tuning_strain": "调谐负担",
   "malum.gui.crucible.attribute.weakness_tuning": "最弱属性调谐",
+  "malum.gui.geas.any": "誓言",
+  "malum.gui.geas.bond_of_beloved_chains": "Beloved Chains盟约",
+  "malum.gui.geas.bond_of_beloved_chains.tooltip": "",
+  "malum.gui.geas.bond_of_deaths_seekers": "Deaths Seekers盟约",
+  "malum.gui.geas.bond_of_deaths_seekers.tooltip": "",
+  "malum.gui.geas.day_effect": "在日间时：",
+  "malum.gui.geas.night_effect": "在夜间时：",
+  "malum.gui.geas.oath_of_the_gleeful_target": "欢愉目标誓约",
+  "malum.gui.geas.oath_of_the_gleeful_target.tooltip": "强欲之魔女因子",
+  "malum.gui.geas.oath_of_the_inverted_heart": "逆反之心誓约",
+  "malum.gui.geas.oath_of_the_inverted_heart.tooltip": "愤怒之魔女因子",
+  "malum.gui.geas.oath_of_the_last_stand": "绝地一搏誓约",
+  "malum.gui.geas.oath_of_the_overeager_fist": "热切重拳誓约",
+  "malum.gui.geas.oath_of_the_overeager_fist.tooltip": "",
+  "malum.gui.geas.oath_of_the_overkeen_eye": "敏锐神眼誓约",
+  "malum.gui.geas.oath_of_the_overkeen_eye.tooltip": "",
+  "malum.gui.geas.oath_of_the_undiscerned_maw": "无恕渊喉誓约",
+  "malum.gui.geas.oath_of_the_undiscerned_maw.tooltip": "",
+  "malum.gui.geas.oath_of_unsighted_resistance": "无形抗性誓约",
+  "malum.gui.geas.oath_of_unsighted_resistance.tooltip": "",
+  "malum.gui.geas.pact_of_reciprocation": "反照条约",
+  "malum.gui.geas.pact_of_reciprocation.tooltip": "",
+  "malum.gui.geas.pact_of_the_concussive_force": "The Concussive Force条约",
+  "malum.gui.geas.pact_of_the_dayblessed": "日祝者条约",
+  "malum.gui.geas.pact_of_the_dayblessed.tooltip": "",
+  "malum.gui.geas.pact_of_the_fortress": "垒塞条约",
+  "malum.gui.geas.pact_of_the_fortress.tooltip": "",
+  "malum.gui.geas.pact_of_the_nightchild": "夜育者条约",
+  "malum.gui.geas.pact_of_the_nightchild.tooltip": "",
+  "malum.gui.geas.pact_of_the_profane_ascetic": "The Profane Ascetic条约",
+  "malum.gui.geas.pact_of_the_profane_ascetic.tooltip": "",
+  "malum.gui.geas.pact_of_the_profane_glutton": "The Profane Glutton条约",
+  "malum.gui.geas.pact_of_the_profane_glutton.tooltip": "",
+  "malum.gui.geas.pact_of_the_reaper": "收割者条约",
+  "malum.gui.geas.pact_of_the_reaper.tooltip": "",
+  "malum.gui.geas.pact_of_the_shattering_addict": "破念瘾君条约",
+  "malum.gui.geas.pact_of_the_shattering_addict.tooltip": "",
+  "malum.gui.geas.pact_of_the_shield": "坚盾条约",
+  "malum.gui.geas.pact_of_the_shield.tooltip": "",
+  "malum.gui.geas.pact_of_the_skybreaker": "裂天者条约",
+  "malum.gui.geas.pact_of_the_skybreaker.tooltip": "",
+  "malum.gui.geas.pact_of_wyrd_reconstruction": "命运重构条约",
+  "malum.gui.geas.sworn": "宣誓后：",
   "malum.gui.rite.aerial_rite": "运动仪式",
   "malum.gui.rite.aqueous_rite": "忠诚仪式",
   "malum.gui.rite.arcane_rite": "无向仪式",
@@ -752,6 +837,7 @@
   "malum.gui.ritual.tier.vivid": "Vivid",
   "malum.gui.ritual.type": "灵仪类型：",
   "malum.gui.ritual.warped_time": "Warped Time",
+  "malum.gui.slot": "槽位：",
   "malum.jei.runeworking": "符文工艺",
   "malum.jei.spirit_focusing": "精魂聚焦",
   "malum.jei.spirit_infusion": "精魂灌注",
@@ -807,6 +893,7 @@
   "malum.subtitle.arcane_rock_step": "脚步声",
   "malum.subtitle.arcane_whispers": "奥术能量：沙沙作响",
   "malum.subtitle.auric_flame_motif": "灵气火焰束：呼啸",
+  "malum.subtitle.authority_of_wrath_takes_effect": "愤怒权能：生效",
   "malum.subtitle.blazing_quartz_block_break": "方块：被破坏",
   "malum.subtitle.blazing_quartz_block_hit": "方块：损坏中",
   "malum.subtitle.blazing_quartz_block_place": "方块：被放置",
@@ -909,6 +996,7 @@
   "malum.subtitle.scythe_cuts": "镰刀：挥砍",
   "malum.subtitle.scythe_spins_happily": "镰刀：欢快地飞旋",
   "malum.subtitle.scythe_sweeps": "镰刀：横扫",
+  "malum.subtitle.scythe_target_is_launched": "镰刀：击飞目标",
   "malum.subtitle.scythe_thrown": "镰刀：抛出",
   "malum.subtitle.scythe_user_ascends": "镰刀手：飞腾",
   "malum.subtitle.shielding_apparatus_shields": "盾御器件：防御",
@@ -967,10 +1055,15 @@
   "malum.subtitle.staff_powers_up": "法杖：充能",
   "malum.subtitle.staff_sizzles_out": "法杖：嘶嘶",
   "malum.subtitle.staff_strikes": "法杖：攻击",
+  "malum.subtitle.sundering_anchor_cuts": "裂斩锚刃：斩击",
+  "malum.subtitle.sundering_anchor_twists_gracefully": "裂斩锚刃：优雅地扭曲",
   "malum.subtitle.the_deep_beckons": "深渊：召唤",
   "malum.subtitle.the_heavens_sing": "天空：歌唱",
   "malum.subtitle.the_unknown_weeps": "未知存在：涕泣",
   "malum.subtitle.the_void_heart_beats": "虚空：心跳声",
+  "malum.subtitle.the_worldsoul_reverberates": "世界之魂：共振",
+  "malum.subtitle.the_worldsoul_shifts_erratically": "世界之魂：剧烈扭动",
+  "malum.subtitle.the_worldsoul_shifts_slightly": "世界之魂：轻微扭动",
   "malum.subtitle.totem_charges": "图腾：充能",
   "malum.subtitle.totemic_rite_activated": "图腾仪式：激活",
   "malum.subtitle.totemic_rite_cancelled": "图腾仪式：失效",
@@ -1249,6 +1342,12 @@
   "malum.gui.book.entry.necklace_of_the_narrow_edge.description": "精准而锋利",
   "malum.gui.book.entry.page.headline.necklace_of_the_narrow_edge": "精准镰刃",
   "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.1": "镰刀的横扫攻击是其亮点，取首 级如刈麦的能力更是无价，但这 也导致镰刀的单体伤害较低。此 项链会以神秘手段将攻击锋刃聚 合汇集，所有能量都导向至单个 目标，大大提升攻击伤害。",
+  "malum.gui.book.entry.necklace_of_the_narrow_edge.ring_of_the_rising_edge": "升腾锋刃戒指",
+  "malum.gui.book.entry.necklace_of_the_narrow_edge.ring_of_the_rising_edge.description": "A键只有按与不按",
+  "malum.gui.book.entry.page.headline.necklace_of_the_narrow_edge.ring_of_the_rising_edge": "升腾锋刃",
+  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.1": "飞腾魔咒能让我凭借镰刃挥出的 风飞起，其中也很明显存在某种 协同魔法。气生生不息，若是引 入简单的结构阵列更改气流方向， 就能修改飞腾魔咒的效果，我称 之为“升腾锋刃”。",
+  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.2": "此戒指除去能让镰刀伤害升高、 冷却延长外，被刃风击中的事物 还会向上飞起。很适合群体控制 之类的东西，但和镰刀本身的效 果一样，精准镰刃也会更改它的 功效。",
+  "malum.gui.book.entry.page.text.necklace_of_the_narrow_edge.ring_of_the_rising_edge.3": "同时佩戴精准镰刃项链和升腾锋 刃戒指时，汇集的挥砍刃风能以 极大力度击飞事物，可借此将敌 人抛过头顶。",
 
   "malum.gui.book.entry.belt_of_the_prospector": "勘探腰带",
   "malum.gui.book.entry.belt_of_the_prospector.description": "大地之宝",
