zh_cn lang hotfix

--- a/src/main/resources/assets/malum/lang/zh_cn.json
+++ b/src/main/resources/assets/malum/lang/zh_cn.json
@@ -1499,7 +1499,7 @@
   "malum.gui.book.entry.corrupt_wicked_rite": "腐化邪恶仪式",
   "malum.gui.book.entry.corrupt_wicked_rite.description": "毁害灵魂",
   "malum.gui.book.entry.page.text.corrupt_wicked_rite": "此仪式不再伤害周围敌对生物， 而是给予它们保护、力量和速度。 相较而言用处较少，但也许有特 种用途。",
-  "malum.gui.book.entry.page.text.corrupt_wicked_rite.hover": "给予周围所有实体抗性提升、力量，以及速度。",
+  "malum.gui.book.entry.page.text.corrupt_wicked_rite.hover": "给予周围所有实体抗性提升、力量，以及迅捷。",
   "malum.gui.book.entry.page.text.corrupt_greater_wicked_rite": "高级仪式，启动时会宰杀周围过 量的牲畜。",
   "malum.gui.book.entry.page.text.corrupt_greater_wicked_rite.hover": "仪式范围内若有超过二十只动物，则多余动物会被消除。\n - 仪式范围内不同的动物分开计算。",
 
